--- a/themes/mrg/css/sass/main.scss
+++ b/themes/mrg/css/sass/main.scss
@@ -307,4 +307,4 @@ dl.inline-wrapped dt{
 @import "_blog-latest";
 @import "_mrg-page-layout";
 @import "_mrg-print";
-@import "_mrg-tmp";
+// @import "_mrg-tmp"; //arreglo slider gabinete
