--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -1692,7 +1692,7 @@ body.home #wrapper .slider_wrapper .slide {
 	@media screen and (min-width: 800px) {
 		
 		float: left;
-		margin-top: 1em;
+		//margin-top: 1em;
 		min-height: 40px;
 	}
 
